"fixed leadeboard filter screen bug(activating selected competition) and collapse motion"

--- a/skietbaan_fe/src/bootstrap/LeaderboardStyle.css
+++ b/skietbaan_fe/src/bootstrap/LeaderboardStyle.css
@@ -577,6 +577,9 @@ html, body{
         width: 100%;
         height: 100%;
         box-shadow: 0 20px 24px -1px rgba(.33,.33,.33,.33);
+        background-color: transparent;
+        border-radius: 8px;
+        height: 48px;
     }
     .current-user-table-section .ranking-table .rank-row .user-more-details-table{
         width: 100%;
@@ -707,5 +710,8 @@ html, body{
          width: 144px;
          display: inline-block;
      }
+     /* .leaderboard-container .row .col-sm-8 .ReactCollapse--collapse{
+        transition: height 800ms 0ms, opacity 500ms 500ms; 
+     } */
 }
  
